Fix Spark Java module access