@@ -7,11 +7,9 @@ lazy val root = (project in file("."))
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-core" % "3.5.6",
       "org.apache.spark" %% "spark-sql" % "3.5.6"
+    ),
+
+    Compile / run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     )
   )
-
-Compile / run / fork := true
-
-Compile / run / javaOptions ++= Seq(
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-)
